--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.15.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
