--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.23.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
@@ -17,9 +18,14 @@
     "express-ejs-layouts": "^2.2.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.1",
+    "gulp-babel": "^6.1.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.5.0",
+    "request": "^2.80.0",
+    "request-promise": "^4.1.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
